0.98...
	small measurement fields added that only scan around mean
	diagnostics in show=1 and show=2 use lines now.
	Todo: fix zoom detection/treatment
	Todo: params for optzoom....
0.97
	optzoom = 2: adaptive zooming added
	border bluring for interpolation>=bilinear
	spurious black pixels bug fixed
0.96
	libavfilter plugins work
	flexible support of pixel formats, ala ffmpeg
0.95
	virtual tripod mode

0.94
	local motions are now stored in the file (file format changed,
	 old one still supported)
	BUGFIX for zero-transforms

0.93
	single pass version filter_deshake
	made stabilize part print the transforms to the file right away

0.92
	boxblur added and unsharp filter removed for motiondetection

0.91
	spiral search for matches in compareSubImg

0.90
	complete restructuring into own library
	Fixed point arithmetic used for transform code
	motiondetection optimized with ORC: speedup by factor 4
	ORC 0.4.14 is now required
	added tests for speed and functional tests
	removed biquadratic interpolation routine

0.80
	keep borders with stabilized last frame (as it should be).
	Pointed out by Guido Torelli.

0.79
	speed optimizations using SSE by Alexey Osipov
	search tree cut, spiral search and sse:
	 together speedup factor ~8 of stabilize run
	stepsize is increased stepwise
	keep border at transform plugin improved


0.77
	interpolation routines improved a lot, thanks to hints on ffmpeg list
	added bicubic interpolation that uses 4x4 pixel (useful for large zoom values)
	bilinear interpolation is now the default
	transform plugin uses last transform for the remaining frames
	 -> this enables to use the transform plugin for constant transformations

0.76
	BUGFIX in calcFieldTransYUV caused SEGFAULT

0.75
	two meta parameter introduces: shakiness and accuracy and
	removal of fieldnum, fielsize, maxshift, maxfieldnum
	field placement changed: Now they fill the frame perfectly
	added bluring such that stepsize can be much larger: much faster now!